Create article table and added table data

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "sequelize-cli": "^6.6.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
